--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,24 @@
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
-
+  "background": {
+      "persistent": false,
+      "scripts": [ "all.js", "content.js", "highlighter.js", "string_utils.js", "xpath.js"]
+   },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "clipboardWrite", 
+    "tts",
+    "storage",
+    "contextMenus",
+    "unlimitedStorage",
+    "webNavigation",
+    "tabs",
+    "\u003Call_urls>"
   ]
 }
