--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "background": {
       "persistent": false,
-      "scripts": [ "all.js", "content.js", "highlighter.js", "string_utils.js", "xpath.js"]
+      "scripts": [ "all.js"]
    },
   "browser_action": {
     "default_icon": "icon.png",
