--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,8 @@
   "version": "1.0",
 
   "background": {
-      "persistent": false,
-      "scripts": [ "all.js"]
-   },
+    "page": "background.html"
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
